# Geldbeutel

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh
.github/: .release-please-config.json
.github/workflows/: build-and-push.yml
backend/: alembic.ini  pyproject.toml
backend/geldbeutel/: main.py
backend/geldbeutel/api/: account_router.py  category_router.py  transaction_router.py
backend/geldbeutel/core/: webserver.py
backend/geldbeutel/database/: db.py
backend/geldbeutel/database/migrations/: env.py
backend/geldbeutel/database/migrations/versions/: 001_account_table.py  002_category_table.py  003_transaction_table.py
backend/geldbeutel/model/domain/: __init__.py  account.py  base.py  category.py  transaction.py
backend/geldbeutel/model/schema/: account.py  category.py  transaction.py
backend/geldbeutel/service/: account_service.py  category_service.py  transaction_service.py
frontend/: package.json  pnpm-lock.yaml  tsconfig.node.json  vite.config.ts
frontend/src/: index.css  main.tsx
frontend/src/components/: MobileNav.tsx  Sidebar.tsx
frontend/src/components/ui/: tooltip.tsx
frontend/src/routes/: __root.tsx  index.tsx
