[project]
name = "backend"
version = "0.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
    "fastapi>=0.135.3",
    "psycopg[binary]>=3.3.3",
    "sqlalchemy[asyncio]>=2.0.49",
    "uvicorn>=0.44.0",
]
